notes/development/languages/Python/literals
$ Python: Literals

{ Numerical literals

  A numerical value can be expressed in its ~hexadecimal representation~ by prefixing it with `0x`
code {
>>> 0xdeadbeef
3735928559
code }

  Similarly, a numerical value can also be expressed as in ~octal representation~ by prefixing it with `0o` (the first character is a zero, the second one an upper or lowercase `o`).
code {
>>> 0o777
511
code }

  Same idea, but as ~byte representation~ (`0b…`, compare with → #py-lit-b[`b'…'`] below). The following expression calculates 4*3:h
code {
0b100 * 0b0011
code }

  In numerical literals, *underscores* can be used to make them more readable by a human eye. Such underscores are simply skipped by the parser.
code {
>>> print(21_000_000_000 / 7_000_000)
3000.0
code }

  A number that is suffixed with a `j` becomes a ~complex~ number:
code {
>>> type(4.2j)
<class 'complex'>
code }

}
{ String literals #py-string-literals

  Strings are either single- or double-quoted.

  Strings in ~double quotes~. Note how two strings are automatically concatenated:
code {
>>> print("foo\nbar\\baz" " x\"y")
foo
bar\baz x"y
code }

  Strings in ~single quotes~:
code {
>>> print('foo\nbar\\baz' ' x\'y')
foo
bar\baz x'y
code }

  { R-Strings

  With *R-strings*, a backslash has no special meaning and represents itself. The R of the R-String stands for raw.
code {
>>> print(r"foo\bar")
foo\bar
code }

  An R-string cannot have a trailing slash!
code {
>>> print(r"foo\bar\")
…
SyntaxError: EOL while scanning string literal
code }

  A trailing slash can be added by the automatic string concatenation:
code {
>>> print(r"foo\bar" "\\")
foo\bar\
code }

  }
  { f-Strings #py-lit-f-str

    An *f-string* replaces → development/languages/Python/expressions[expressions] within curly braces with the values the evaluate to.
    -
    The f in f-strings stands for formatted string (see also the `→ development/languages/Python/types/string/format` method of the → development/languages/Python/types/string[string] object).
code {
>>> a=7
>>> b=6
>>> print(f'{a} * {b} = {a*b}')
7 * 6 = 42
code }

  In f-strings, a number can be printed with a comma as thousand separator like so:
code {
>>> cost_per_item = 19_999
>>> items = 61
>>> print(f'Total cost: {cost_per_item * items:,}')
Total cost: 1,219,939
code }

    Left- and right-aligning data (for columnar output)
code {
data = [("Alice", 25, "USA"), ("Bob", 7, "UK")]

print(f"{'Name':<10}{'Age':<5}{'Country':<10}")
for name, age, country in data:
    print(f"{name:<10} {age:>2} {country:<3}")
code }

    Dynamic widths:
code {
wid = 6
val = 123
print(f"Value: {val:{wid}}") # Value:    123
code }


    A variable followed by an equal sign (`=`) expands both, the variable name and its value:
code {
>>> var = 42
>>> print(f'{var=}')
var=42
code }

    In an f-string, a curly brace must be escaped by itself:
code {
print(f'{{ within ONE pair of curly braces }}')
code }

    See also → https://peps.python.org/pep-0498/[PEP-498 - Literal String Interpolation] 

  }
  { Multi-line strings

  «Normal» strings cannot have → development/line-break[new lines] in them:
code {
>>> print('first line
          ^
SyntaxError: unterminated string literal (detected at line 1)
code }
  In order to create multi line strings, the string must be embedded in «triple quotes» (single or double):
code {
>>> txt = """foo
... bar\n
... baz"""
>>>
>>> print(txt)
foo
bar

baz
code }

     That said, Python recognizes `\n` and `\r` in string literals:
code {
print('one\ntwo\nthree')
print('ABCDE world\rhello')
code }

   }

}
{ Byte string literals (b-strings) #py-lit-b

 `b'…'` creates a `→ development/languages/Python/types/bytes` object:
code {
>>> name = b'Ren\xc3\xa9'
>>> type(name)
<class 'bytes'>
>>> print(name.decode('→ development/Unicode/UTF-8[utf-8]'))
René
code }

  The characters in a b-string must be either ASCII or escaped hexadecimal values:
code {
>>> print(b'ähm')
SyntaxError: bytes can only contain → development/Unicode/ASCII literal characters
code }


}
{ Identity of literals

  Even literals have an identity:
code {
>>> → development/languages/Python/built-in-functions/id[id](42)
140707326270400
code }

}

sa:
  → Windows/PowerShell/language/lexical-structure/token/literal[Literals in PowerShell]
